// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`criterion helpers > buildCriterion > builds \`prop:op:val\` when op given 1`] = `"Resolution:gte:1080p"`;

exports[`criterion helpers > buildCriterion > builds \`prop:userId:op:val\` when userId given 1`] = `"Played:abc123:true:yes"`;

exports[`criterion helpers > buildCriterion > builds \`prop:val\` when no op and no user 1`] = `"4K"`;

exports[`criterion helpers > buildCriterion > maps back via MI_REVERSE_MAP when known 1`] = `"4K"`;

exports[`criterion helpers > buildCriterion > maps back via MI_REVERSE_MAP when known 2`] = `"HEVC"`;

exports[`criterion helpers > buildCriterion > returns empty for empty prop 1`] = `""`;

exports[`criterion helpers > buildCriterion > returns empty for empty val 1`] = `""`;

exports[`criterion helpers > migrateCommaSeparated > converts comma-separated to newline 1`] = `
"a
b
c"
`;

exports[`criterion helpers > migrateCommaSeparated > drops empty items 1`] = `
"a
b"
`;

exports[`criterion helpers > migrateCommaSeparated > leaves newline-separated input untouched 1`] = `
"a
b
c"
`;

exports[`criterion helpers > migrateCommaSeparated > prefers newline over comma (no conversion when both present? actually NO — see code) 1`] = `
"a
b,c"
`;

exports[`criterion helpers > migrateCommaSeparated > returns empty for falsy input 1`] = `""`;

exports[`criterion helpers > migrateCommaSeparated > returns empty for falsy input 2`] = `null`;

exports[`criterion helpers > migrateCommaSeparated > returns string unchanged when no separators at all 1`] = `"lonely"`;

exports[`criterion helpers > migrateCommaSeparated > trims whitespace around items 1`] = `
"a
b
c"
`;

exports[`criterion helpers > parse + build round-trip > legacy asymmetry: buildCriterion strips the ! prefix 1`] = `"4K"`;

exports[`criterion helpers > parseCriterion > detects leading \`!\` as not-flag 1`] = `
{
  "not": true,
  "op": "",
  "prop": "Resolution",
  "userId": "",
  "val": "4K",
}
`;

exports[`criterion helpers > parseCriterion > handles Collection:Name (colons preserved in name) 1`] = `
{
  "not": false,
  "op": "",
  "prop": "Collection",
  "userId": "",
  "val": "Star Wars",
}
`;

exports[`criterion helpers > parseCriterion > handles Playlist:Name (colons preserved in name) 1`] = `
{
  "not": false,
  "op": "",
  "prop": "Playlist",
  "userId": "",
  "val": "My Mix:2026",
}
`;

exports[`criterion helpers > parseCriterion > maps shorthand tokens via MI_CRITERION_MAP 1`] = `
{
  "not": false,
  "op": "",
  "prop": "Resolution",
  "userId": "",
  "val": "4K",
}
`;

exports[`criterion helpers > parseCriterion > maps shorthand tokens via MI_CRITERION_MAP 2`] = `
{
  "not": false,
  "op": "",
  "prop": "VideoCodec",
  "userId": "",
  "val": "HEVC",
}
`;

exports[`criterion helpers > parseCriterion > maps shorthand tokens via MI_CRITERION_MAP 3`] = `
{
  "not": false,
  "op": "",
  "prop": "AudioChannels",
  "userId": "",
  "val": "7.1",
}
`;

exports[`criterion helpers > parseCriterion > parses a 3-part \`prop:op:val\` form 1`] = `
{
  "not": false,
  "op": "gte",
  "prop": "Resolution",
  "userId": "",
  "val": "1080p",
}
`;

exports[`criterion helpers > parseCriterion > parses a 4-part \`prop:userId:op:val\` form 1`] = `
{
  "not": false,
  "op": "true",
  "prop": "Played",
  "userId": "abc123",
  "val": "yes",
}
`;

exports[`criterion helpers > parseCriterion > parses a simple \`Resolution:4K\` form 1`] = `
{
  "not": false,
  "op": "",
  "prop": "Resolution",
  "userId": "",
  "val": "4K",
}
`;

exports[`criterion helpers > parseCriterion > returns default shape for empty input 1`] = `
{
  "not": false,
  "op": "",
  "prop": "Resolution",
  "userId": "",
  "val": "",
}
`;

exports[`criterion helpers > parseCriterion > returns default shape for null input 1`] = `
{
  "not": false,
  "op": "",
  "prop": "Resolution",
  "userId": "",
  "val": "",
}
`;
